fixed section spacing, added wrapper for content

--- a/src/EatEase.Blazor.Web/wwwroot/css/page.css
+++ b/src/EatEase.Blazor.Web/wwwroot/css/page.css
@@ -20,30 +20,40 @@
 }
 
 html {
+    scrollbar-width: thin; /* Make scrollbar thin */
     scroll-behavior: smooth;
     background: linear-gradient(to bottom, var(--dark-main), var(--dark-gray), var(--light-dark-gray));
-
 }
 
 body {
+    height: 100%;
     margin: 0;
+    min-height: 100vh;
     font-family: "JetBrains Mono", sans-serif;
 }
 
 section {
+    padding: 120px 32px 32px;
     height: 100dvh;
+    margin: 0 auto;
+}
+
+section .wrapper-header {
+    max-width: 1200px;
+    padding: 32px;
+    margin: 0 auto;
     font-size: 40px;
     font-weight: bold;
     color: var(--text-color);
 }
 
-section:nth-of-type(even) {
-}
-
-section .wrapper {
+section .wrapper-content {
     max-width: 1200px;
-    padding: 32px;
+    padding: 32px 100px 32px 32px;
+    font-weight: normal;
     margin: 0 auto;
+    font-size: 14px;
+    color: var(--text-color);
 }
 
 .scroll-indicator {
